# audiomap

./: .gitignore  README.md  README_PACKAGE.md  example_usage.py  pyproject.toml
pyaudio_detector/: __init__.py  cli.py
