[project]
name = "audiomap"
version = "1.0.0"
description = "Cross-platform audio device mapping with UID support"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Andy Lee", email = "your.email@example.com"}
]
keywords = ["audio", "device", "detection", "uid", "cross-platform", "macos", "windows", "linux", "coreaudio", "wasapi", "alsa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
windows = [
    "comtypes>=1.4.11",
    "pycaw>=20240210",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/audio-device-uid"
Repository = "https://github.com/yourusername/audio-device-uid.git"
Issues = "https://github.com/yourusername/audio-device-uid/issues"

[project.scripts]
audiomap = "audiomap.cli:main"
